--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -137,15 +137,17 @@
     .div-footer2 {
         width: 220px;
         padding-left: 40px;
-        color: white;
         border-left-style: solid;
         border-width: thin;
+        color: white;
+        display: grid;
     }
     .div-footer2 a {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: bold;
         font-size: x-small;
         color: white;
+        margin: 0px 0px 3px 0px;
     }
     /*TEXTOS*/
     .btn-entrar {
@@ -198,12 +200,13 @@
 
     #divTermos{
         padding: 0px 15px;
-        margin: 10px 0px 5px 0px;
+        margin: 10px 0px 10px 0px;
     }
 
     #textoTermos{
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-size: 11px;
+        display: contents;
     }
 }
 
