--- a/css/ecossistema_2.css
+++ b/css/ecossistema_2.css
@@ -107,12 +107,12 @@
         width: 55%;
     }
     #divisao3-left-top {
-        height: 57%;
+        /*height: 57%;*/
         width: 100%;
         padding: 115.2px 0px 0px 0px;
     }
     #divisao3-left-bot {
-        height: 43%;
+        /*height: 43%;*/
         width: 100%;
     }
     #divisao3-left-bot-top {
@@ -152,40 +152,125 @@
     }
     #divisao4 {
         position: relative;
-        height: 271.2px;
+       /* height: 470px;*/
+        /*height: 350px;*/
         width: 100%;
-        padding-top: 30.4px;
+        padding: 30.4px 0px 30.4px 0px;
         background: rgba(27, 84, 56, 0.05);
     }
     .divisao4-order {
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
     }
-    #img8-prop {
+
+    .divisao4-order-linha{
+        display: flex;
+        flex-direction: initial;
+        align-items: center;
+    }
+
+    .imgSlot{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 90px;
+        width: 200px;
+    }
+
+    #img-ufc-prop {
+        position: relative;
+        height: 54px;
+        width: 186.6px;
+    }
+    #img-uece-prop {
+        position: relative;
+        height: 59.8px;
+        width: 174px;
+    }
+    #img-gesid-prop {
+        position: relative;
+        height: 49.28px;
+        width: 109.5px;
+    }
+    #img-facaparte-prop {
+        position: relative;
+        height: 84.5px;
+        width: 130.56px;
+    }
+
+    #img-rapadura-prop {
+        position: relative;
+        height: 65px;
+        width: 90px;
+    }
+
+    #img-rtech-prop {
+        position: relative;
+        height: 49.28px;
+        width: 109.5px;
+    }
+
+    #img-ufca-prop {
         position: relative;
         height: 72px;
-        width: 248.8px;
-        margin: 32px 0px 0px;
+        width: 208px;
     }
-    #img9-prop {
+
+    #img-pqtec-prop {
         position: relative;
-        height: 89.6px;
-        width: 260px;
-        margin: 32px 0px 0px 65px;
+        height: 80px;
+        width: 130px;
     }
-    #img10-prop {
+
+    #img-cond-prop {
         position: relative;
-        height: 61.6px;
-        width: 136.8px;
-        margin: 32px 0px 0px 65px;
+        height: 53.8px;
+        width: 156px;
     }
-    #img11-prop {
+
+    #img-kariri-prop {
         position: relative;
-        height: 105.6px;
-        width: 163.2px;
-        margin: 32px 0px 0px 65px;
+        height: 55px;
+        width: 80px;
     }
+
+    #img-pii-prop {
+        position: relative;
+        height: 90px;
+        width: 80px;
+    }
+
+    #img-crie-prop {
+        position: relative;
+        height: 60.5px;
+        width: 85.44px;
+    }
+
+    #img-ale-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-casaazul-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-code-prop {
+        position: relative;
+        height: 150.5px;
+        width: 149.44px;
+    }
+
+    #img-juazeirodonorte-prop{
+        position: relative;
+        height: 84px;
+        width: 226.6px;
+    }
+
     #divisao5 {
         position: relative;
         height: 656.8px;
@@ -226,6 +311,15 @@
         align-items: center;
         color: #000000;
     }
+
+    .textos-colaboradores{
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 14.6px;
+        margin: 15px 0px 0px 0px;
+    }
+
     .lista-textos-ecossistema {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-style: normal;
@@ -233,6 +327,7 @@
         margin: 0;
         padding: 15px 0px 0px 15px;
     }
+
 }
 
 /*Mobile*/
@@ -389,42 +484,111 @@
         height: fit-content;
         width: 100%;
         margin-top: 40.4px;
-        padding: 30.4px 0px 30.4px 0px;
+        padding: 30.4px 0px 40.4px 0px;
         background: rgba(27, 84, 56, 0.05);
     }
+
     .divisao4-order {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    .divisao4-order-linha{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    #img8-prop {
-        position: relative;
-        height: 57.6px;
-        width: 199.04px;
-        margin-top: 25px;
-        /*margin: 32px 0px 0px;*/
+
+    .imgSlot{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 90px;
+        width: 200px;
     }
-    #img9-prop {
+
+    #img-ufc-prop {
         position: relative;
-        height: 71.68px;
-        width: 208px;
-        margin-top: 25px;
-        /* margin: 32px 0px 0px 72.8px;*/
+        height: 54px;
+        width: 186.6px;
     }
-    #img10-prop {
+    #img-uece-prop {
+        position: relative;
+        height: 59.8px;
+        width: 174px;
+    }
+    #img-gesid-prop {
         position: relative;
         height: 49.28px;
-        width: 109.44px;
-        margin-top: 25px;
-        /*margin: 32px 0px 0px 72.8px;*/
+        width: 109.5px;
     }
-    #img11-prop {
+    #img-facaparte-prop {
         position: relative;
-        height: 84.48px;
+        height: 84.5px;
         width: 130.56px;
-        margin-top: 25px;
-        /*margin: 32px 0px 0px 72.8px;*/
     }
+
+    #img-rapadura-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-rtech-prop {
+        position: relative;
+        height: 49.28px;
+        width: 109.5px;
+    }
+
+    #img-ufca-prop {
+        position: relative;
+        height: 72px;
+        width: 208px;
+    }
+
+    #img-cond-prop {
+        position: relative;
+        height: 53.8px;
+        width: 156px;
+    }
+
+    #img-kariri-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-pii-prop {
+        position: relative;
+        height: 90px;
+        width: 80px;
+    }
+
+    #img-crie-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-ale-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-casaazul-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-code-prop {
+        position: relative;
+        height: 150.5px;
+        width: 149.44px;
+    }
+    
     /*DIVISÃO 5*/
     #divisao5 {
         position: relative;
@@ -475,4 +639,122 @@
         margin: 0;
         padding: 15px 0px 0px 15px;
     }
+}
+
+@media only screen and (max-width: 800px) {
+    
+    #divisao4 {
+        position: relative;
+        height: fit-content;
+        width: 100%;
+        margin-top: 40.4px;
+        padding: 30.4px 0px 40.4px 0px;
+        background: rgba(27, 84, 56, 0.05);
+    }
+    
+    .divisao4-order-linha{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .divisao4-order {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .imgSlot{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 90px;
+        width: 200px;
+    }
+
+    #img-ufc-prop {
+        position: relative;
+        height: 54px;
+        width: 186.6px;
+    }
+    #img-uece-prop {
+        position: relative;
+        height: 59.8px;
+        width: 174px;
+    }
+    #img-gesid-prop {
+        position: relative;
+        height: 49.28px;
+        width: 109.5px;
+    }
+    #img-facaparte-prop {
+        position: relative;
+        height: 84.5px;
+        width: 130.56px;
+    }
+
+    #img-rapadura-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-rtech-prop {
+        position: relative;
+        height: 49.28px;
+        width: 109.5px;
+    }
+
+    #img-ufca-prop {
+        position: relative;
+        height: 72px;
+        width: 208px;
+    }
+
+    #img-cond-prop {
+        position: relative;
+        height: 53.8px;
+        width: 156px;
+    }
+
+    #img-kariri-prop {
+        position: relative;
+        height: 72.5px;
+        width: 109.44px;
+    }
+
+    #img-juazeirodonorte-prop{
+        position: relative;
+        height: 84px;
+        width: 226.6px;
+    }
+}
+
+.modal-body-colaboradores{
+    overflow-x: auto;
+    overflow-y: auto;
+    white-space:normal;
+}
+
+.listaColaboradores li{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #1B5438;
+    list-style: circle;
+    margin: 5px 0px;
+}
+
+#btn-filtro1 {
+    width: 91.576px;
+    height: 32px;
+    margin-right: 12px;
+    border: 1px solid #FC6A38;
+    background: white;
+    color: #FC6A38;
+}
+#btn-filtro2 {
+    width: 91.576px;
+    height: 32px;
+    border: 1px solid #FC6A38;
+    background: #FC6A38;
+    color: white;
 }
