--- a/css/evento.css
+++ b/css/evento.css
@@ -265,21 +265,23 @@
     .div-footer2 {
         width: 220px;
         padding-left: 40px;
-        color: white;
         border-left-style: solid;
         border-width: thin;
-    }
-    .div-footer-beta {
-        width: fit-content;
-        font-size: x-small;
         color: white;
-        margin: 0;
+        display: grid;
     }
     .div-footer2 a {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: bold;
         font-size: x-small;
         color: white;
+        margin: 0px 0px 3px 0px;
+    }
+    .div-footer-beta {
+        width: fit-content;
+        font-size: x-small;
+        color: white;
+        margin: 0;
     }
     .container {
         min-height: 100%;
