--- a/css/footer.css
+++ b/css/footer.css
@@ -42,18 +42,20 @@
         border-left-style: solid;
         border-width: thin;
         color: white;
-    }
-    .div-footer-beta {
-        width: fit-content;
-        font-size: x-small;
-        color: white;
-        margin: 0;
+        display: grid;
     }
     .div-footer2 a {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: bold;
         font-size: x-small;
         color: white;
+        margin: 0px 0px 3px 0px;
+    }
+    .div-footer-beta {
+        width: fit-content;
+        font-size: x-small;
+        color: white;
+        margin: 0;
     }
     .btn-entrar {
         width: 117px;
