--- a/css/login.css
+++ b/css/login.css
@@ -160,15 +160,17 @@
     .div-footer2 {
         width: 220px;
         padding-left: 40px;
-        color: white;
         border-left-style: solid;
         border-width: thin;
+        color: white;
+        display: grid;
     }
     .div-footer2 a {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         font-weight: bold;
         font-size: x-small;
         color: white;
+        margin: 0px 0px 3px 0px;
     }
     /*TEXTOS*/
     #email {
